--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#058c00</color>
-    <color name="colorPrimaryDark">#035900</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorPrimary">#003159</color>
+    <color name="colorPrimaryDark">#001959</color>
+    <color name="colorAccent">#058c00</color>
+    <color name="colorImageBackground">#c4c4c4</color>
+    <color name="colorPrimaryButton">#359428</color>
 </resources>
