--- a/app/src/main/res/layout/content_list.xml
+++ b/app/src/main/res/layout/content_list.xml
@@ -8,11 +8,16 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_list"
-    tools:context="com.example.jasonwong94.productapp.ListActivity">
+    tools:context="com.example.jasonwong94.productapp.ProductListActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="40sp"
-        android:text="@string/addProduct"/>
+        android:text="@string/addProduct"
+        android:visibility="invisible" />
+    <ListView
+        android:id="@+id/displayProductsList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
 </RelativeLayout>
