--- a/app/src/main/res/layout/activity_row_product.xml
+++ b/app/src/main/res/layout/activity_row_product.xml
@@ -9,13 +9,11 @@
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <include layout="@layout/tool_bar" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_list" />
+    <include layout="@layout/content_row_list_product" />
 
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
