--- a/app/src/main/res/layout/content_list_product.xml
+++ b/app/src/main/res/layout/content_list_product.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="40sp"
-        android:text="@string/addProduct"
+        android:text="@string/add_product"
         android:visibility="invisible" />
     <ListView
         android:id="@android:id/list"
